@@ -35,6 +35,7 @@ requests from users, including:
   Jeffery Hughes
   Ward Kinkade
   Stas Kolenikov
+  Franziska Kößler
   Scott Kostyshak
   Alex Kowarik
   Michael Laviolette
